adicionando conteudo de texto

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,8 @@
             <div class="event__details">
                 <h2 class="event__details__title">Front-end</h2>
                 <p class="event__details__description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam placeat distinctio at iste quod ipsa, debitis obcaecati aperiam quaerat, repellat totam doloribus laudantium culpa, ipsum ullam deserunt maiores ipsam dolorum!
+                    Front-end é a parte visual de um site ou aplicativo, que permite a interação do usuário com a aplicação. O front-end é responsável pela apresentação de um site, gerenciando a usabilidade, o design e a experiência do usuário. 
+                    Os desenvolvedores front-end são os profissionais que criam a interface gráfica de um site ou aplicativo, utilizando tecnologias como HTML, CSS e JavaScript. As suas tarefas incluem
                 </p>
             </div>
             <img class="event__image" src="./images/frontend.png" alt="Front-end">
@@ -56,10 +57,10 @@
             <div class="event__details">
                 <h2 class="event__details__title">UX/UI</h2>
                 <p class="event__details__description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam placeat distinctio at iste quod ipsa, debitis obcaecati aperiam quaerat, repellat totam doloribus laudantium culpa, ipsum ullam deserunt maiores ipsam dolorum!
+                    UI é a Interface do Usuário, ou seja, é o que promove a interação dos usuários com o produto, seja um site, um teclado ou a tela de exibição de um celular. Já o UX é a Experiência do Usuário, que vai além da parte física, focando na experiência sensorial do usuário.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="ux-ui">
         </div>
     </section>
 
@@ -68,10 +69,10 @@
             <div class="event__details">
                 <h2 class="event__details__title">Data Science</h2>
                 <p class="event__details__description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam placeat distinctio at iste quod ipsa, debitis obcaecati aperiam quaerat, repellat totam doloribus laudantium culpa, ipsum ullam deserunt maiores ipsam dolorum!
+                    A ciência de dados é o estudo dos dados para extrair insights significativos para os negócios. Ela é uma abordagem multidisciplinar que combina princípios e práticas das áreas de matemática, estatística, inteligência artificial e engenharia da computação para analisar grandes quantidades de dados.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Data-Science">
         </div>
     </section>
 
@@ -83,7 +84,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam placeat distinctio at iste quod ipsa, debitis obcaecati aperiam quaerat, repellat totam doloribus laudantium culpa, ipsum ullam deserunt maiores ipsam dolorum!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="backend">
         </div>
     </section>
 
