--- a/src/index.html
+++ b/src/index.html
@@ -3,93 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EBAC Tech Talks</title>
+    <title>exercicio de timer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.scss">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/main.scss">
 </head>
 <body>
-    <header class="hero">
+    <div class="conteudo">
         <div class="container">
-            <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
-            <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em <span id="contador"></span>
+            <img src="./images/blue.png" alt="imagen do desenvolvedor">
+            <p class="text">
+                MEU ANIVERSÁRIO COMEÇA EM <br> <span id="contador"> 10D 12H 30M 20S </span>
             </p>
-            <div class="infos-bar">
-                <ul class="infos-bar__infos">
-                    <li class="infos-bar__infos__item">
-                        <b>Localização </b>
-                        Allianz Parque - Barra Funda - São Paulo
-                    </li>
-                    <li class="infos-bar__infos__item">
-                        <b>Preço</b>
-                        A partir de R$ 120,00
-                    </li>
-                    <li class="infos-bar__infos__item">
-                        <b>Quando</b>
-                        22/12/2024 às 19hrs
-                    </li>
-                </ul>
-                <a href="#" class="button button--primary">
-                    Garanta sua vaga
-                </a>
-            </div>
         </div>
-    </header>
+    </div>
 
-    <section class="event event--frontend">
-        <div class="container" data-aos="fade-right">
-            <div class="event__details">
-                <h2 class="event__details__title">Front-end</h2>
-                <p class="event__details__description">
-                    Front-end é a parte visual de um site ou aplicativo, que permite a interação do usuário com a aplicação. O front-end é responsável pela apresentação de um site, gerenciando a usabilidade, o design e a experiência do usuário. 
-                    Os desenvolvedores front-end são os profissionais que criam a interface gráfica de um site ou aplicativo, utilizando tecnologias como HTML, CSS e JavaScript. As suas tarefas incluem
-                </p>
-            </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
-        </div>
-    </section>
-
-    <section class="event event--ux-ui event--image-left">
-        <div class="container" data-aos="fade-left">
-            <div class="event__details">
-                <h2 class="event__details__title">UX/UI</h2>
-                <p class="event__details__description">
-                    UI é a Interface do Usuário, ou seja, é o que promove a interação dos usuários com o produto, seja um site, um teclado ou a tela de exibição de um celular. Já o UX é a Experiência do Usuário, que vai além da parte física, focando na experiência sensorial do usuário.
-                </p>
-            </div>
-            <img class="event__image" src="./images/ui-ux.png" alt="ux-ui">
-        </div>
-    </section>
-
-    <section class="event event--data-science">
-        <div class="container" data-aos="fade-right">
-            <div class="event__details">
-                <h2 class="event__details__title">Data Science</h2>
-                <p class="event__details__description">
-                    A ciência de dados é o estudo dos dados para extrair insights significativos para os negócios. Ela é uma abordagem multidisciplinar que combina princípios e práticas das áreas de matemática, estatística, inteligência artificial e engenharia da computação para analisar grandes quantidades de dados.
-                </p>
-            </div>
-            <img class="event__image" src="./images/data.png" alt="Data-Science">
-        </div>
-    </section>
-
-    <section class="event event--backend event--image-left">
-        <div class="container" data-aos="fade-left">
-            <div class="event__details">
-                <h2 class="event__details__title">Back-end</h2>
-                <p class="event__details__description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam placeat distinctio at iste quod ipsa, debitis obcaecati aperiam quaerat, repellat totam doloribus laudantium culpa, ipsum ullam deserunt maiores ipsam dolorum!
-                </p>
-            </div>
-            <img class="event__image" src="./images/backend.png" alt="backend">
-        </div>
-    </section>
-
-
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
